EventStats lambda with Stats endpoint (#113)
